grafana-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana
  namespace: monitoring
spec:
  ingressClassName: nginx
  rules:
  - host: grafana-test.secil
    http:
      paths:
      - backend:
          service:
            name: monitoring-stack-grafana
            port:
              number: 80
        path: /
        pathType: Prefix
